// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Screen /> should handle "loading/loadingOverlayProps" props 1`] = `
<Screen
  loading={true}
  loadingOverlayProps={
    Object {
      "spinnerProps": Object {
        "size": "medium",
      },
    }
  }
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="loading-overlay fill"
            >
              <div>
                <svg
                  class="spinner size-medium"
                  height="48"
                  viewBox="0 0 48 48"
                  width="48"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="circle stroke__brand-blue"
                    cx="24"
                    cy="24"
                    r="23"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <LoadingOverlay
          spinnerProps={
            Object {
              "size": "medium",
            }
          }
        >
          <div
            className="loading-overlay fill"
          >
            <Spinner
              size="medium"
            >
              <div>
                <svg
                  className="spinner size-medium"
                  height={48}
                  viewBox="0 0 48 48"
                  width={48}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    className="circle stroke__brand-blue"
                    cx={24}
                    cy={24}
                    r={23}
                  />
                </svg>
              </div>
            </Spinner>
          </div>
        </LoadingOverlay>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should handle props 1`] = `
<Screen
  footer="Test footer"
  onBack={[MockFunction]}
  onClose={[MockFunction]}
  subtitle="Test subtitle"
  title="Test title"
  withBackButton={true}
  withCloseButton={true}
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="nav-bar inner-border-bottom"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-label="Вернуться назад"
                    class="button icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon icon-block color__gray87"
                      height="24"
                      viewBox="0 0 36 36"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.121 19.5l7.941 7.938c.583.585.583 1.539 0 2.125a1.511 1.511 0 0 1-2.125 0l-10.5-10.5a1.511 1.511 0 0 1 0-2.125l10.5-10.5a1.511 1.511 0 0 1 2.126 0c.582.585.582 1.539 0 2.125L8.12 16.5H31.5a1.5 1.5 0 0 1 0 3zm0 0"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Закрыть Test title"
                    class="button icon stub"
                  />
                </div>
              </div>
              <div
                class="main"
              >
                <div
                  class="title truncate"
                >
                  Test title
                </div>
                <div
                  class="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-label="Закрыть Test title"
                    class="button icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon icon-block color__gray87"
                      height="24"
                      viewBox="0 0 36 36"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Вернуться назад"
                    class="button icon stub"
                  />
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            >
              Test content
            </div>
            <div
              class="footer full-width"
            >
              Test footer
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          footer="Test footer"
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          subtitle="Test subtitle"
          title="Test title"
          withBackButton={true}
          withCloseButton={true}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "aria-label": "Закрыть Test title",
                  "icon": [Function],
                  "onClick": [Function],
                },
                "start": Object {
                  "aria-label": "Вернуться назад",
                  "icon": [Function],
                  "onClick": [Function],
                },
              }
            }
            subtitle="Test subtitle"
            title="Test title"
          >
            <div
              className="nav-bar inner-border-bottom"
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Вернуться назад"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                  >
                    <button
                      aria-label="Вернуться назад"
                      className="button icon"
                      onClick={[Function]}
                    >
                      <Icon
                        aria-hidden="true"
                        color="gray87"
                        icon={[Function]}
                        size={24}
                      >
                        <arrowLeft
                          aria-hidden="true"
                          className="icon icon-block color__gray87"
                          height={24}
                          viewBox="0 0 36 36"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-hidden="true"
                            className="icon icon-block color__gray87"
                            height={24}
                            viewBox="0 0 36 36"
                            width={24}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.121 19.5l7.941 7.938c.583.585.583 1.539 0 2.125a1.511 1.511 0 0 1-2.125 0l-10.5-10.5a1.511 1.511 0 0 1 0-2.125l10.5-10.5a1.511 1.511 0 0 1 2.126 0c.582.585.582 1.539 0 2.125L8.12 16.5H31.5a1.5 1.5 0 0 1 0 3zm0 0"
                            />
                          </svg>
                        </arrowLeft>
                      </Icon>
                    </button>
                  </NavButton>
                </div>
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть Test title"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                    stub={true}
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть Test title"
                      className="button icon stub"
                      onClick={[Function]}
                    />
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              >
                <div
                  className="title truncate"
                >
                  Test title
                </div>
                <div
                  className="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть Test title"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                  >
                    <button
                      aria-label="Закрыть Test title"
                      className="button icon"
                      onClick={[Function]}
                    >
                      <Icon
                        aria-hidden="true"
                        color="gray87"
                        icon={[Function]}
                        size={24}
                      >
                        <crossIcon
                          aria-hidden="true"
                          className="icon icon-block color__gray87"
                          height={24}
                          viewBox="0 0 36 36"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-hidden="true"
                            className="icon icon-block color__gray87"
                            height={24}
                            viewBox="0 0 36 36"
                            width={24}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clipRule="evenodd"
                              d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </crossIcon>
                      </Icon>
                    </button>
                  </NavButton>
                </div>
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Вернуться назад"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                    stub={true}
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Вернуться назад"
                      className="button icon stub"
                      onClick={[Function]}
                    />
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          >
            Test content
          </div>
          <div
            className="footer full-width"
          >
            Test footer
          </div>
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should render without props 1`] = `
<Screen>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="nav-bar inner-border-bottom"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Закрыть undefined"
                    class="button icon stub"
                  />
                </div>
              </div>
              <div
                class="main"
              />
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-label="Закрыть undefined"
                    class="button icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon icon-block color__gray87"
                      height="24"
                      viewBox="0 0 36 36"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            />
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          withBackButton={false}
          withCloseButton={true}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "aria-label": "Закрыть undefined",
                  "icon": [Function],
                  "onClick": [Function],
                },
                "start": undefined,
              }
            }
          >
            <div
              className="nav-bar inner-border-bottom"
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть undefined"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                    stub={true}
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть undefined"
                      className="button icon stub"
                      onClick={[Function]}
                    />
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              />
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть undefined"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                  >
                    <button
                      aria-label="Закрыть undefined"
                      className="button icon"
                      onClick={[Function]}
                    >
                      <Icon
                        aria-hidden="true"
                        color="gray87"
                        icon={[Function]}
                        size={24}
                      >
                        <crossIcon
                          aria-hidden="true"
                          className="icon icon-block color__gray87"
                          height={24}
                          viewBox="0 0 36 36"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-hidden="true"
                            className="icon icon-block color__gray87"
                            height={24}
                            viewBox="0 0 36 36"
                            width={24}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clipRule="evenodd"
                              d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </crossIcon>
                      </Icon>
                    </button>
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          />
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should renders without close button 1`] = `
<Screen
  navBarProps={
    Object {
      "buttons": Object {
        "end": Object {
          "text": "cross replacer",
        },
      },
    }
  }
  subtitle="Test subtitle"
  title="Test title"
  withCloseButton={false}
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="nav-bar inner-border-bottom"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    class="button stub"
                  >
                    cross replacer
                  </button>
                </div>
              </div>
              <div
                class="main"
              >
                <div
                  class="title truncate"
                >
                  Test title
                </div>
                <div
                  class="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    class="button"
                  >
                    cross replacer
                  </button>
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            />
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          navBarProps={
            Object {
              "buttons": Object {
                "end": Object {
                  "text": "cross replacer",
                },
              },
            }
          }
          onBack={[Function]}
          onClose={[Function]}
          subtitle="Test subtitle"
          title="Test title"
          withBackButton={false}
          withCloseButton={false}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "text": "cross replacer",
                },
                "start": undefined,
              }
            }
            subtitle="Test subtitle"
            title="Test title"
          >
            <div
              className="nav-bar inner-border-bottom"
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    shift={false}
                    stub={true}
                    text="cross replacer"
                  >
                    <button
                      aria-hidden="true"
                      className="button stub"
                    >
                      cross replacer
                    </button>
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              >
                <div
                  className="title truncate"
                >
                  Test title
                </div>
                <div
                  className="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    shift={false}
                    text="cross replacer"
                  >
                    <button
                      className="button"
                    >
                      cross replacer
                    </button>
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          />
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;
